# nas-av1-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GHIBLI_DUAL_AUDIO.md  GUIDE.md  README.md  ROADMAP.md  paths.py  pyproject.toml  report.html
.claude/: launch.json  settings.json
control_templates/: gentle.json  pause_all.json  pause_encode.json  pause_fetch.json  priority.json  profiles.json  reencode.json  skip.json
frontend/: vite.config.js
naslib/: __init__.py  __main__.py  inventory.py  plan.py  run.py  scan.py  verify.py
pipeline/: __init__.py  __main__.py  audio_exclusion.py  circuit_breaker.py  compliance.py  compliance_fixers.py  config.py  content_grade.py  control.py  cq_override.py  encoding.py  ffmpeg.py  filename.py  full_gamut.py  gap_fill_lock.py  gap_filler.py  grade_review.py  language.py  local_mux.py  metadata.py  mkv_tags.py  nas_worker.py  orchestrator.py  prep_streams.py  process_registry.py  qualify.py  queue.py  report.py  runner.py  runner.py.deprecated  stages.py  stages.py.deprecated  state.py  streams.py  subs.py  subs_exclusion.py  transfer.py
server/: __init__.py  __main__.py  audit.py  helpers.py  middleware.py  models.py  process_manager.py
tests/: conftest.py  test_api.py  test_audio_exclusion.py  test_audio_strip_rules.py  test_audit_single_source.py  test_backup_auto_delete.py  test_bloat_retry.py  test_build_queues.py  test_circuit_breaker.py  test_clean_filename_metric.py  test_compliance.py  test_compliance_audio_sub_credit.py  test_compliance_check.py  test_compliance_filename_and_merged_fix.py  test_compliance_filename_uses_final_path.py  test_compliance_fixer_replace_retry.py  test_compliance_fixer_track_ids.py  test_compliance_fresh_probe.py  test_config.py  test_content_grade.py  test_convert_replace_stale_entry.py  test_corrupt_handler_resource.py  test_cq_adherence_routing.py  test_detect_languages.py  test_done_non_av1_auto_reset.py  test_drop_streams_size_threshold.py  test_dual_audio_ghibli.py  test_encode_output_watchdog.py  test_fetch_source_missing.py  test_ffmpeg_builder.py  test_filename.py  test_flagged_auto_reset_on_refresh.py  test_forecast_debloat.py  test_forecast_tier_weighted.py  test_gap_analysis.py  test_gap_fill_lock.py  test_gap_fill_rename_no_loop.py  test_gap_filler_audio_transcode_routing.py  (+60 more)
(+134 files in other folders)
