[project]
name = "nas-cleanup"
version = "2.0.0"
description = "AV1 re-encoding pipeline, dashboard, and NAS utility tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "faster-whisper>=1.2.1",
    "langdetect>=1.0.9",
    "pytesseract>=0.3.13",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
pipeline = "pipeline.__main__:main"
scan = "tools.scanner:main"
subtitles = "tools.subtitles:main"
plex-collections = "tools.plex_collections:main"
plex-metadata = "tools.plex_metadata:main"
dashboard = "server:run"
