[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nas-av1-pipeline"
version = "2.0.0"
description = "AV1 re-encoding pipeline with NVENC hardware encoding, NAS cleanup, and web dashboard"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kieran O'Brien"}]

dependencies = [
    "fastapi>=0.115",
    "langdetect>=1.0.9",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.20.0.48",
    "pytesseract>=0.3.13",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.9",
]

[project.scripts]
pipeline = "pipeline.__main__:main"
scan = "tools.scanner:main"
subtitles = "tools.subtitles:main"
plex-metadata = "tools.plex_metadata:main"
dashboard = "server:run"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]  # line length handled by formatter; short var names OK in comprehensions

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "server", "tools"]
